<resources>
    <string name="app_name">Adminibot</string>
    <string name="title_activity_register">REGISTRO</string>

    <!-- banks -->
    <string name="banks_hint">Seleccione un banco</string>
    <string name="banks_bancomer">Bancomer</string>
    <string name="banks_banamex">Banamex</string>
    <string name="banks_banorte">Bancomer</string>
    <string name="banks_santander">Santander</string>
    <string name="banks_hsbc">HSBC</string>
    <string name="banks_wallmart">Wallmart</string>
    <string name="banks_scotiabank">Scotia bank</string>
    <string name="banks_amex">American Express</string>
    <string name="banks_bnk_azteca">Banco Azteca</string>
    <string name="banks_banregio">Banregio</string>
    <string name="banks_bancoopel">Bancoopel</string>
    <string name="banks_famsa">Banco ahorro famsa</string>

    <!-- error messages -->
    <string name="error_empty_value">El campo es requerido</string>
    <string name="error_wrong_format_email">El formato del email es incorrecto</string>
    <string name="error_wrong_length_email">El tamaño del email es incorrecto</string>
    <string name="error_wrong_lenght_name">El nombre es demasiado largo</string>
    <string name="error_wrong_lenght_last_name">El apellido es demasiado largo</string>
    <string name="error_wrong_lenght_password">El password es demasiado largo</string>
    <string name="error_wrong_format_name">El nombre debe contener solo letras</string>
    <string name="error_wrong_format_last_name">El apellido debe contener solo letras</string>
    <string name="error_wrong_lenght_concept">El concepto es demasiado largo</string>
    <string name="error_wrong_account">El número de cuenta es incorrecto</string>
    <string name="error_wrong_lenght_check_number">El número de cheque es numérico con un máximo de 18 digitos</string>
    <string name="error_wrong_lenght_issuance_code">La longitud del código de emisión es incorrecta</string>
    <string name="error_wrong_incorrect_amount">El monto debe estar compuesto de 10 enteros y 2 decimales como máximo</string>
    <string name="error_wrong_lenght_field">El campo es demasiado largo</string>
    <string name="error_wrong_only_numbers">El campo debe ser numerico</string>
    <string name="error_wrong_length_card_number">Se debe especificar 3 digitos de identificación para la tarjeta</string>
    <string name="error_wrong_brand_card">Debe seleccionar la marca de la tarjeta</string>
    <string name="error_wrong_bank">Debe seleccionar un banco</string>
    <string name="title_activity_home_activity">Adminibot!</string>

    <!-- * Welcome -->
    <string name="title_welcome">Selecciona una opción</string>
    <string name="title_option_1">Ingreso</string>
    <string name="msg_description_1">Registra uno o varios metodos de pago.</string>
    <string name="title_option_2">Tarjeta de crédito</string>
    <string name="msg_description_2">Registra una tarjeta de crédito.</string>
    <string name="title_option_3">Ahorros</string>
    <string name="msg_description_3">Registra tus ahorros.</string>

    <!-- * Payment methods income concept dialog -->
    <string name="title_concept_of_income">Concepto del ingreso *</string>
    <string name="error_concept_of_income">El concepto es obligatorio</string>

    <!-- * Dialog buttons -->
    <string name="msg_accept">Aceptar</string>
    <string name="msg_cancel">Cancelar</string>

    <!-- * Cash dialog -->
    <string name="title_cash_amount">Monto en efectivo *</string>
    <string name="error_amount">El monto no puede estar vacío</string>

    <!-- * Food coupon dialog -->
    <string name="title_food_coupon_amount">Monto de vales o cupones de despensa *</string>

    <!-- * Payment methods activity -->
    <string name="title_payment_methods">Metodos de pago</string>
    <string name="title_alert_empty_payment_methods">¡Hey!</string>
    <string name="msg_alert_empty_payment_methods">Agrega algun método de pago para continuar.</string>
    <string name="msg_action_bar_edit_action">Editar</string>

    <!-- * payment methods types -->
    <string name="msg_food_coupons">Vales de despensa</string>
    <string name="msg_cash">Efectivo</string>
    <string name="msg_credit_card">Tarjeta de crédito</string>
    <string name="msg_debit_card">Tarjeta de débito</string>

    <!-- * debit card -->
    <string name="title_debit_card">Nueva tarjeta de débito</string>
    <string name="msg_debit_card_name">Nombre de la tarjeta *</string>
    <string name="msg_debit_card_number">Número *</string>
    <string name="msg_debit_card_amount">Monto *</string>
    <string name="msg_debit_card_valid_thru">Valida hasta</string>
    <string name="msg_debit_card_button">Agregar</string>
    <string-array name="banks_array">
        <item>Banamex</item>
        <item>Bancomer</item>
        <item>Santander</item>
        <item>HSBC</item>
        <item>Wallmart</item>
        <item>Scotia bank</item>
        <item>American Express</item>
    </string-array>
    <string name="msg_error_empty_name">El nombre de la tarjeta es requerido</string>
    <string name="msg_error_empty_card_number">El número de tarjeta es requerido</string>
    <string name="msg_error_empty_card_amount">El monto es requerido</string>

    <!-- * total income dialog -->
    <string name="msg_commit_income">¿Registrar Nuevo ingreso?</string>
    <string name="msg_total_income">Total: %1$s</string>
    <string name="msg_income_concept">Concepto: %1$s</string>

    <!-- * empty title -->
    <string name="title_empty">Editar movimientos</string>
    <string name="title_activity_cash_income">Ingreso en efectivo</string>
    <string name="title_activity_food_coupon">Ingreso en vales de despensa</string>
</resources>
