...
                android:text="Pago de quincena zigo"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <TextView
                android:id="@+id/text_total_amount"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="14dp"
                android:gravity="center_vertical|center_horizontal"
                android:text="$0.00"
                android:textColor="#FFFFFF"
...
            android:layout_height="match_parent"
            android:divider="@null"/>

    </LinearLayout>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/button_save_payment_methods"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_margin="16dp"
        android:src="@drawable/ic_save"
        app:backgroundTint="#00BCD4"
        app:elevation="7dp"
...
