<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#00BCD4"
        android:gravity="center"
        android:paddingBottom="20dp"
        android:paddingTop="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_food_coupon_dialog"/>

    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/text_input_layout_food_coupon"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:paddingLeft="24dp"
        android:paddingRight="24dp"
        android:theme="@style/IncomeConceptTextInputLayout">

        <EditText
            android:id="@+id/edit_food_coupon_amount"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/title_food_coupon_amount"
            android:inputType="numberDecimal"
            android:textSize="27sp"/>

    </android.support.design.widget.TextInputLayout>

</LinearLayout>
